[gd_scene load_steps=18 format=3 uid="uid://2yhkf65hkrtq"]

[ext_resource type="Script" path="res://script/main.gd" id="1_mrtqq"]
[ext_resource type="PackedScene" uid="uid://bi6y8srnu1s7p" path="res://scene/player.tscn" id="2_rljh5"]
[ext_resource type="Script" path="res://script/BG.gd" id="3_qlwu4"]
[ext_resource type="Script" path="res://script/UI.gd" id="4_0kiug"]
[ext_resource type="Script" path="res://script/Dead Zone.gd" id="4_i8il0"]
[ext_resource type="Theme" uid="uid://bcihif0mi53lh" path="res://resource/menu.tres" id="4_l4142"]
[ext_resource type="Texture2D" uid="uid://gubohlj00oex" path="res://sprite/background/main.png" id="6_76qd2"]
[ext_resource type="Texture2D" uid="uid://wt8i3yvgrcw6" path="res://sprite/background/bldgs back.png" id="7_dhep6"]
[ext_resource type="Texture2D" uid="uid://80f0inv7pfsy" path="res://sprite/background/2.png" id="8_nn0ld"]
[ext_resource type="Texture2D" uid="uid://cbbdbjj87tn7n" path="res://sprite/background/1.png" id="9_0ixhv"]
[ext_resource type="Texture2D" uid="uid://njir8npkq03q" path="res://sprite/background/clouds back.png" id="10_knxhl"]
[ext_resource type="Texture2D" uid="uid://51ouhv47g3ta" path="res://sprite/background/clouds middle.png" id="11_emfud"]
[ext_resource type="Texture2D" uid="uid://1upicnrp7h6l" path="res://sprite/background/clouds front.png" id="12_7wn5o"]
[ext_resource type="Script" path="res://script/Game Manager.gd" id="14_o3n5j"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_v0qux"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_gf4dh"]
distance = -119.0

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_uhtgl"]

[node name="Main" type="Node2D"]
script = ExtResource("1_mrtqq")

[node name="Player" parent="." instance=ExtResource("2_rljh5")]
z_index = 5
position = Vector2(238, 293)
scale = Vector2(0.35, 0.35)

[node name="Spawn Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Death Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Pillar Free" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pillar Free"]
position = Vector2(-142, 270)
rotation = 1.5708
shape = SubResource("WorldBoundaryShape2D_v0qux")

[node name="Dead Zone" type="Area2D" parent="."]
position = Vector2(521, 120)
script = ExtResource("4_i8il0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Dead Zone"]
rotation = 3.14159
shape = SubResource("WorldBoundaryShape2D_gf4dh")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Dead Zone"]
position = Vector2(26, 599)
shape = SubResource("WorldBoundaryShape2D_uhtgl")

[node name="UI" type="CanvasLayer" parent="."]
follow_viewport_enabled = true
script = ExtResource("4_0kiug")

[node name="score_label" type="Label" parent="UI"]
anchors_preset = -1
anchor_right = 0.0199653
anchor_bottom = 0.037037
offset_left = 214.0
offset_top = 43.0
offset_right = 265.0
offset_bottom = 94.0
theme = ExtResource("4_l4142")
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="starting_label" type="Label" parent="UI"]
offset_left = 105.0
offset_top = 431.0
offset_right = 409.0
offset_bottom = 482.0
theme = ExtResource("4_l4142")
text = "FLAP TO START"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="BG" type="ParallaxBackground" parent="."]
follow_viewport_enabled = true
script = ExtResource("3_qlwu4")

[node name="main" type="ParallaxLayer" parent="BG"]
motion_mirroring = Vector2(1152, 0)

[node name="g" type="Sprite2D" parent="BG/main"]
position = Vector2(576, 360)
scale = Vector2(0.436364, 0.5625)
texture = ExtResource("6_76qd2")
metadata/_edit_lock_ = true

[node name="Building Back" type="ParallaxLayer" parent="BG"]
motion_scale = Vector2(0.8, 0.8)
motion_mirroring = Vector2(1152, 0)

[node name="BldgsBack" type="Sprite2D" parent="BG/Building Back"]
position = Vector2(576, 360)
scale = Vector2(0.436364, 0.5625)
texture = ExtResource("7_dhep6")
metadata/_edit_lock_ = true

[node name="Building Middle" type="ParallaxLayer" parent="BG"]
motion_scale = Vector2(0.9, 0.9)
motion_mirroring = Vector2(1152, 0)

[node name="2" type="Sprite2D" parent="BG/Building Middle"]
position = Vector2(576.5, 360)
scale = Vector2(0.436742, 0.5625)
texture = ExtResource("8_nn0ld")
metadata/_edit_lock_ = true

[node name="Building Front" type="ParallaxLayer" parent="BG"]
motion_mirroring = Vector2(1152, 0)

[node name="1" type="Sprite2D" parent="BG/Building Front"]
position = Vector2(576, 360)
scale = Vector2(0.436364, 0.5625)
texture = ExtResource("9_0ixhv")
metadata/_edit_lock_ = true

[node name="Clouds Back" type="ParallaxLayer" parent="BG"]
motion_scale = Vector2(0.1, 0.1)
motion_mirroring = Vector2(1152, 0)

[node name="CloudsBack" type="Sprite2D" parent="BG/Clouds Back"]
position = Vector2(576, 360)
scale = Vector2(0.436364, 0.5625)
texture = ExtResource("10_knxhl")
metadata/_edit_lock_ = true

[node name="Clouds Middle" type="ParallaxLayer" parent="BG"]
motion_scale = Vector2(0.25, 0.25)
motion_mirroring = Vector2(1152, 0)

[node name="CloudsMiddle" type="Sprite2D" parent="BG/Clouds Middle"]
position = Vector2(576, 360)
scale = Vector2(0.436364, 0.5625)
texture = ExtResource("11_emfud")
metadata/_edit_lock_ = true

[node name="Clouds Front" type="ParallaxLayer" parent="BG"]
motion_scale = Vector2(0.4, 0.4)
motion_mirroring = Vector2(1152, 0)

[node name="CloudsFront" type="Sprite2D" parent="BG/Clouds Front"]
position = Vector2(576, 360)
scale = Vector2(0.436364, 0.5625)
texture = ExtResource("12_7wn5o")
metadata/_edit_lock_ = true

[node name="Game Manager" type="Node2D" parent="."]
script = ExtResource("14_o3n5j")

[connection signal="timeout" from="Spawn Timer" to="." method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="Death Timer" to="." method="_on_death_timer_timeout"]
[connection signal="area_entered" from="Pillar Free" to="." method="_on_pillar_free_area_entered"]
[connection signal="body_entered" from="Pillar Free" to="." method="_on_pillar_free_body_entered"]
[connection signal="body_entered" from="Dead Zone" to="Dead Zone" method="_on_body_entered"]
